src/objects/Orders__c.object
<CustomObject>
    <fields>
        <fullName>AS400_Cancellation_Details__c</fullName>
        <label>AS400 Cancellation Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS400_Order_Number__c</fullName>
        <label>AS400 Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_400_Submission_Details__c</fullName>
        <description>Keeps track of any submission issues to AS400</description>
        <label>AS 400 Submission Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allowance_Discount__c</fullName>
        <label>Allowance Discount</label>
        <summarizedField>Allowance__c.Allowance_Amount__c</summarizedField>
        <summaryForeignKey>Allowance__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amazon_ID__c</fullName>
        <label>Amazon ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amazon_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amazon Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archive_Summary__c</fullName>
        <label>Archive Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization_Amount__c</fullName>
        <label>Authorization Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AvalaraCalloutFailure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avalara Callout Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Response_Date_Time__c</fullName>
        <label>Bank Response Date &amp; Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <externalId>true</externalId>
        <label>Batch Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Sequence_Number__c</fullName>
        <label>Batch Sequence Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Details__c</fullName>
        <label>Bill To Address Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Orders (Bill To Address)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCV__c</fullName>
        <label>CCV</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Search__c</fullName>
        <label>CTI Search</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Calculated_Discount__c</fullName>
        <formula>IF( ISPICKVAL(Payment_Type__c, &apos;Paypal&apos;), Order_Total__c - Order_Sub_Total__c - Tax__c - Calculated_Shipping__c ,
IF( ISPICKVAL(Sales_Channel__c, &apos;Phone&apos;), -Discount__c ,
IF( Authorization_Amount__c=0 , 0,
Authorization_Amount__c -Order_Sub_Total__c - Tax__c - Calculated_Shipping__c) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Order_Total__c</fullName>
        <formula>IF( AND(ISPICKVAL(Sales_Channel__c , &apos;Brand Website&apos;), NOT(Authorization_Amount__c==0 )  )  ,  Authorization_Amount__c ,  Order_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Shipping__c</fullName>
        <formula>Misc_Charge_Amount__c +  Shipping_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled_Reason__c</fullName>
        <inlineHelpText>Why is the Order Status set to &quot;Cancelled&quot;?</inlineHelpText>
        <label>Cancelled Reason</label>
        <picklist>
            <controllingField>Order_Status__c</controllingField>
            <picklistValues>
                <fullName>Orphan Order Clean-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Order Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS400 Error Exception Clean Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Credit Card Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Source_Code__c</fullName>
        <description>Catalog Source Code</description>
        <label>Catalog Source Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_Applied__c</fullName>
        <label>Credit Amount Applied</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Applied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <label>Credit Card Expiration Date</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <description>Encrypted Credit Card Number for re-authorization.</description>
        <label>Credit Card Number</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Token__c</fullName>
        <label>Credit Card Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <picklist>
            <controllingField>Payment_Type__c</controllingField>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Reasons__c</fullName>
        <label>Credit Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Match</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Fraud_Risk__c</fullName>
        <formula>IF(
 Customer__r.Possible_Fraud__c , &quot;Yes&quot;, &quot;No&quot;
)</formula>
        <label>Customer Fraud Risk?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Field Populated with the Customers First and Last Name for use by the email template AR</description>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Instructions__c</fullName>
        <label>Delivery Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Foreign_Fax_Number__c</fullName>
        <label>Foreign Fax Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Phone_Number__c</fullName>
        <label>Foreign Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Order_Date__c</fullName>
        <inlineHelpText>What is the date of the Future Order?</inlineHelpText>
        <label>Future Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Order is a Future Order.</inlineHelpText>
        <label>Future Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Order is a gift.</inlineHelpText>
        <label>Gift Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Review_Reason__c</fullName>
        <inlineHelpText>Why is the Order Status set to &quot;Internal Review&quot;?</inlineHelpText>
        <label>Internal Review Reason</label>
        <picklist>
            <controllingField>Order_Status__c</controllingField>
            <picklistValues>
                <fullName>Manually Added by Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Over $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 100 of a Single Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship Complete was checked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Address__c</fullName>
        <formula>IF ( Ship_To_Address__r.International_Address__c , &quot;Yes&quot; , &quot;No&quot; )</formula>
        <label>International Address?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Update__c</fullName>
        <label>Last Status Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mail_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Order is a Mail Order.</inlineHelpText>
        <label>Mail Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Misc_Charge_Amount__c</fullName>
        <label>Miscellaneous Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Charge_Code__c</fullName>
        <label>Miscellaneous Charge Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Catalogs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to indicate if a customer does not want to receive catalogs.</description>
        <inlineHelpText>This check box is used to indicate if a customer does not want to receive catalogs.</inlineHelpText>
        <label>No Catalogs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Customer does not want to receive a printed Invoice of their order with their shipment.</description>
        <inlineHelpText>Check if Customer does not want to receive a printed Invoice of their order with their shipment.</inlineHelpText>
        <label>No Invoice?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Peanuts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Customer does not wish to have packing peanuts used with their shipment.</description>
        <inlineHelpText>Check if Customer does not wish to have packing peanuts used with their shipment.</inlineHelpText>
        <label>No Peanuts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Substitutes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Customer does not want to receive substitute items or sizes.</description>
        <inlineHelpText>Check if Customer does not want to receive substitute items or sizes.</inlineHelpText>
        <label>No Substitutes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Confirm_Brand__c</fullName>
        <label>Order Confirm Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Confirm_Email__c</fullName>
        <label>Order Confirm Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <description>Legacy Order Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy Order Id</inlineHelpText>
        <label>Order Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Origin__c</fullName>
        <description>Flag to differentiate orders</description>
        <inlineHelpText>Flag to differentiate orders</inlineHelpText>
        <label>Order Origin</label>
        <picklist>
            <picklistValues>
                <fullName>From Order History</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Status_Code__c</fullName>
        <description>Stores AS400 order status code (PB,PA,SA, etc.)</description>
        <label>Order Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status_Description__c</fullName>
        <description>Long description of order status</description>
        <label>Order Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Physical Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Sub_Total__c</fullName>
        <label>Order Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Authorization_Code__c</fullName>
        <label>Payment Authorization Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Profile_ID__c</fullName>
        <label>Payment Profile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Transaction_Reference_Index__c</fullName>
        <label>Payment Transaction Reference Index</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Transaction_Reference_Number__c</fullName>
        <label>Payment Transaction Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Customer&apos;s method of payment</description>
        <label>Payment Type</label>
        <picklist>
            <controllingField>Sales_Channel__c</controllingField>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Certificate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Value__c</fullName>
        <label>Payment Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paypal_Authorization_Code__c</fullName>
        <label>Paypal Authorization Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Potential_Fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Fraud?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Order_Number__c</fullName>
        <formula>IF( Third_Party_Order_Number__c !=&apos;&apos;, Third_Party_Order_Number__c , IF( Webstack_Order_ID__c !=&apos;&apos; , Webstack_Order_ID__c , Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotions</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pull_Order_Reason_Multi__c</fullName>
        <label>Pull Order Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Make Sure Caps are Tight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Shipping Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Bubble Wrap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship in More than One Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Shipping Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Advertisements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Peanuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice on Outside of Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pull_Order_Reason_Other__c</fullName>
        <label>Pull Order Reason Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pull_Order_Reason__c</fullName>
        <inlineHelpText>Why is this Order being pulled?</inlineHelpText>
        <label>Pull Order Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Make Sure Caps are Tight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Shipping Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Bubble Wrap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship in More than One Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Shipping Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Advertisements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Peanuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice On Outside Of Box-Traffic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pull_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Customer wants to pull this Order.</inlineHelpText>
        <label>Pull Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Authorize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Authorize?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Bad_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Bad Address</label>
        <referenceTo>Bad_Customer__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Bad_Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Bad Email</label>
        <referenceTo>Bad_Customer__c</referenceTo>
        <relationshipLabel>Orders (Related Bad Email)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Cases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Cases</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Order_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This order has an Order Adjustment associated to it.</description>
        <label>Related Order Adjustment</label>
        <referenceTo>Order_Adjustment__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replacement_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replay_Existing_CC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only for use within code to determine if an existing cc token or a new cc will be used for authorization.</description>
        <label>Replay Existing CC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <description>Why is this order being returned?</description>
        <label>Return Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Refund_Type__c</fullName>
        <label>Return Refund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Customer is returning the Order.</inlineHelpText>
        <label>Return?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reversal_Status__c</fullName>
        <label>Reversal Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Order is a Rush Order.</inlineHelpText>
        <label>Rush Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Customer_Number__c</fullName>
        <formula>Customer__r.Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Same_as_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Ship To Address is the same as the Bill To Address.</description>
        <inlineHelpText>Check if the Ship To Address is the same as the Bill To Address.</inlineHelpText>
        <label>Same as Billing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Customer wishes their Order to be shipped only when able to be shipped in its entirety.</description>
        <inlineHelpText>Check if Customer wishes their Order to be shipped only when able to be shipped in its entirety.</inlineHelpText>
        <label>Ship Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Details__c</fullName>
        <label>Ship To Address Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_PO_BOX__c</fullName>
        <formula>IF(  Ship_To_Address__r.PO_Box__c, &quot;YES&quot; , &quot;NO&quot;)</formula>
        <label>Ship To PO BOX?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Email_Address__c</fullName>
        <label>Ship to Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_First_Name__c</fullName>
        <label>Ship to First Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Last_Name__c</fullName>
        <label>Ship to Last Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Name__c</fullName>
        <label>Ship to Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Salutation__c</fullName>
        <label>Ship to Salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Value__c</fullName>
        <description>What the order would cost with the default source code applied.</description>
        <label>Shipment Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <description>Denotes the shipping method for the order.</description>
        <inlineHelpText>Denotes the shipping method for the order.</inlineHelpText>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>UPS</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TwoDay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NextDay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <description>Source code returned by promotions service</description>
        <label>Source Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Party_Order_Number__c</fullName>
        <label>3rd Party Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signals if the order is a valid duplicate.</description>
        <label>Valid Duplicate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Order_ID__c</fullName>
        <formula>IF(ISBLANK(Webstack_Order_ID__c), Name, Webstack_Order_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Order ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webstack_ID__c</fullName>
        <label>Webstack ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webstack_Order_ID__c</fullName>
        <label>Webstack Order ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>